# AI_TRAVEL_AGENT

./: .gitignore  Dockerfile  README.md  app.py  elasticsearch.yaml  k8s-deployment.yaml  pyproject.toml  requirements.txt  setup.py
experiments/: experiments.ipynb
src/agents/: travel_agent.py
src/config/: config.py
src/core/: planner.py
src/tools/: serper_tool.py  tavily_tool.py
